[gd_scene load_steps=3 format=3 uid="uid://dc2b4m1kxniqp"]

[ext_resource type="Script" path="res://addons/gmap/builder/MapBulder.gd" id="1_q1hxj"]
[ext_resource type="Texture2D" uid="uid://od3ps4scpq2q" path="res://addons/gmap/icons/refresh.svg" id="2_vw7o4"]

[node name="MapBuilder" type="ScrollContainer"]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
script = ExtResource("1_q1hxj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Map templates
"

[node name="mapTemplate" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/mapTemplate"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
selected = 0
popup/item_0/text = "[select]"
popup/item_0/id = 0

[node name="Button" type="Button" parent="VBoxContainer/mapTemplate"]
layout_mode = 2
icon = ExtResource("2_vw7o4")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Map info
"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
selected = 0
popup/item_0/text = "[select]"
popup/item_0/id = 0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_vw7o4")

[node name="MapInformation" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MapName" type="LineEdit" parent="VBoxContainer/MapInformation"]
layout_mode = 2
placeholder_text = "Map name"

[node name="MapAuthor" type="LineEdit" parent="VBoxContainer/MapInformation"]
layout_mode = 2
placeholder_text = "Map author"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MapInformation"]
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="VBoxContainer/MapInformation/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "MAJOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/MapInformation/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "MINOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/MapInformation/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "PATCH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MAJOR" type="SpinBox" parent="VBoxContainer/MapInformation/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MINOR" type="SpinBox" parent="VBoxContainer/MapInformation/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PATCH" type="SpinBox" parent="VBoxContainer/MapInformation/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="CreateMap" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Create Map"

[node name="Buildmap" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Build Map"

[node name="UpdateMap" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Update"

[node name="HTTPRequest" type="HTTPRequest" parent="VBoxContainer"]
use_threads = true
timeout = 10.0

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/OptionButton" to="." method="_on_map_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_updateMapList_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/CreateMap" to="." method="_on_create_map_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Buildmap" to="." method="_on_buildmap_pressed"]
